config/local/mesh/mtls-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
    name: default
    namespace: default
spec:
    mtls:
      mode: STRICT
